<resources>
    <string name="app_name" translatable="false">TRADE FDV</string>
    <string name="url_server_backend" translatable="false">http://plataforma.puli.com.co:8080/backend-trade/</string>
    <string name="url_server_backend_web" translatable="false">http://plataforma.puli.com.co/querys/</string>
    <string name="url_server_images" translatable="false">http://plataforma.puli.com.co/images/</string>
    <string name="url_server" translatable="false">plataforma.puli.com.co</string>
    <string name="url_server_tiles_map_osm" translatable="false">http://plataforma.puli.com.co/osm_tiles/</string>
    <string name="key_shared_preferences" translatable="false">VncTr@!32OIs</string>
    <string name="txt_in" translatable="false">In</string>
    <string name="txt_out" translatable="false">Out</string>
    <string name="txt_x" translatable="false">AUS</string>
    <string name="txt_nov" translatable="false">NOV</string>
    <string name="txt_chat" translatable="false">Chat</string>
    <string name="txt_number_cero" translatable="false">0</string>
    <string name="txt_titulo_dialog_check" translatable="false">Check PDV</string>
    <string name="txt_administradores" translatable="false">Admons</string>
    <string name="txt_fecha_placeholder" translatable="false">DD MMM AAAA</string>
    <string name="txt_hora_placeholder" translatable="false">HH:MM AM/PM</string>
    <string name="channel_id_default" translatable="false">PULI-Notification-2019</string>
    <string name="channel_name" translatable="false">PULI-Notification-Channel</string>
    <string name="noti_channel_default" translatable="false">Primary Channel</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_descripcion_imagen_footer" translatable="false">TRADE Footer</string>
    <string name="txt_descripcion_logo" translatable="false">TRADE Logo</string>
    <string name="txt_inspeccion_previa">Enlistment Protocol</string>
    <string name="txt_fin_ruta">End Visit</string>
    <string name="txt_user">User</string>
    <string name="txt_ingresar">Login</string>
    <string name="txt_recordad_pass">Did you forget your password? click here to remember it</string>
    <string name="txt_crear_usuario">Create a user</string>
    <string name="txt_consultar_ciudades">consulting cities&#8230;</string>
    <string name="txt_msg_error_consulta_ciudades">An error has occurred when querying the cities.</string>
    <string name="txt_documento">Identity document</string>
    <string name="txt_nombres">First Name</string>
    <string name="txt_apellidos">Last Name</string>
    <string name="txt_direccion">Address</string>
    <string name="txt_ciudad">City</string>
    <string name="txt_tel_fijo">Phone</string>
    <string name="txt_celular">Cell phone</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_placa_vehiculo">Vehicle license plate</string>
    <string name="txt_marca_vehiculo">Vehicle brand</string>
    <string name="txt_barrio">Neighborhood</string>
    <string name="txt_pasajero">Passenger:</string>
    <string name="txt_registrar_usuario">Processing record&#8230;</string>
    <string name="txt_validar_acceso">Validating access&#8230;</string>
    <string name="txt_registro_ruta">Recording start of visit&#8230;</string>
    <string name="txt_registro_fin_ruta">Recording end of visit&#8230;</string>
    <string name="txt_msg_error_registro_inicio_ruta">Sorry, it was not possible to process the visit start record on the server, please try again.</string>
    <string name="txt_msg_error_registro_fin_ruta">Sorry, it was not possible to process the end of visit record on the server, please try again.</string>
    <string name="txt_campo_requerido">Required field</string>
    <string name="txt_email_invalido">Invalid email</string>
    <string name="txt_msg_usuario_registrado">Registered user successfully. Please check your email to obtain the access data.</string>
    <string name="txt_msg_error_consulta">Sorry, an error occurred during the query.</string>
    <string name="txt_msg_error_login">Wrong username/password</string>
    <string name="txt_aceptar">Accept</string>
    <string name="txt_actualizar">Update</string>
    <string name="txt_reintentar">Retry</string>
    <string name="txt_nuevo_password">New Password</string>
    <string name="txt_pass_no_match">The password does not match</string>
    <string name="txt_actualizar_password">Processing update&#8230;</string>
    <string name="txt_error_id_usuario">Sorry, there was an error getting the user id.</string>
    <string name="txt_msg_error_red">Please check your internet connection and try again</string>
    <string name="txt_msg_error_red_gps">Please check your internet connection, it is not possible to register your current position update.</string>
    <string name="txt_msg_error_tiempo_conexion">There was a connection error, time limit exceeded, please check your connection and try again</string>
    <string name="txt_msg_error_id_vehiculo">Sorry, it is not possible to get the vehicle ID</string>
    <string name="txt_msg_error_id_ruta">Sorry, it is not possible to get the PDV ID</string>
    <string name="txt_lista_pasajeros">List</string>
    <string name="txt_consulta_lista_pdv">Checking the PDV list&#8230;</string>
    <string name="txt_msg_lista_pdv_vacia">You have no PDV assigned for your visit today.</string>
    <string name="txt_msg_lista_pdv_pedido_vacia">You do not have assigned PDV to place orders.</string>
    <string name="txt_consulta_lista_categorias">Consulting list of Categories&#8230;</string>
    <string name="txt_msg_lista_categorias_vacio">No available categories were found to perform the query.</string>
    <string name="txt_msg_no_pdv_checkin">Check-In has not been performed for the PDV assigned to your visit. Please do this procedure first before placing an order.</string>
    <string name="txt_msg_checkin">CheckIn registered successfully</string>
    <string name="txt_msg_checkout">Checkout registered successfully</string>
    <string name="txt_msg_checkausente">Check Absent successfully registered</string>
    <string name="txt_msg_gps_error">There was an error detecting your location, please make sure to enable the use of GPS and the use of your location</string>
    <string name="txt_configurar">Set up</string>
    <string name="txt_cancelar">Cancel</string>
    <string name="txt_label_empresa">Business:</string>
    <string name="txt_mensajes">Posts</string>
    <string name="txt_alertas">Alerts</string>
    <string name="txt_control_pdv">PDV monitoring</string>
    <string name="txt_agendamiento">Scheduling</string>
    <string name="txt_cerrar_sesion">Logout</string>
    <string name="txt_descripcion_imagen_ruta">Transport route image</string>
    <string name="txt_descripcion_imagen_mensaje">Imágen mensajesImage messages</string>
    <string name="txt_titulo_error_google_play_services">Google Play Services Error</string>
    <string name="txt_msg_error_google_play_services">Sorry, your device does not support Google Play Services, for this reason notifications will not be available</string>
    <string name="txt_msg_registro_gcm">Registering device on GCM server&#8230;</string>
    <string name="txt_msg_error_registro_gcm">There was a problem registering the device to the GCM server, the APP will continue but notifications cannot be received</string>
    <string name="txt_msg_registro_token_bd">Updating device token in database&#8230;</string>
    <string name="txt_msg_error_registro_token_bd">Sorry, an error occurred while registering the device token in the Database</string>
    <string name="txt_descripcion_imagen_btn_enviar">Submit button image description</string>
    <string name="txt_mensaje">Message</string>
    <string name="txt_titulo_mensajes">Message history</string>
    <string name="txt_consulta_mensajes">Checking messages&#8230;</string>
    <string name="txt_msg_mensajes_vacios">No messages found</string>
    <string name="txt_titulo_alertas">Alert history</string>
    <string name="txt_msg_alertas_vacios">No alerts found</string>
    <string name="txt_consulta_alertas">Checking alerts&#8230;</string>
    <string name="txt_guardar">Save</string>
    <string name="txt_publicar">Post</string>
    <string name="txt_nueva_alerta">New alert</string>
    <string name="txt_tipo_alerta">Alert type:</string>
    <string name="txt_registro_alerta">Registering new alert&#8230;</string>
    <string name="txt_registro_alerta_ok">New alert registered successfully.</string>
    <string name="txt_msg_alertas_empty">Sorry, you do not have a group assigned to log alerts.</string>
    <string name="txt_registro_check">Registering Check point of sale&#8230;</string>
    <string name="txt_consultar_usuarios_chat">Consulted users&#8230;</string>
    <string name="txt_msg_usuarios_chat_vacios">There are no users available for chat</string>
    <string name="txt_padres">Fathers</string>
    <string name="txt_msg_titulo_cerrar_sesion">Logout</string>
    <string name="txt_msg_cerrar_sesion">Your session will be closed. Do you wish to continue?.</string>
    <string name="txt_consulta_novedades">Checking news&#8230;</string>
    <string name="txt_msg_novedades_vacios">No news found</string>
    <string name="txt_nueva_novedad">Nueva novedad</string>
    <string name="txt_registro_novedad">Registering new novelty&#8230;</string>
    <string name="txt_registro_novedad_ok">New novelty successfully registered.</string>
    <string name="txt_consulta_inspeccion">Consulting inspection&#8230;</string>
    <string name="txt_msg_inspeccion_vacios">No inspections found</string>
    <string name="txt_bien">OK</string>
    <string name="txt_mal">Bad</string>
    <string name="txt_msg_error_consulta_fecha_inspeccion_previa">Sorry, an error occurred while querying the last pre-inspection date.</string>
    <string name="txt_msg_error_inspeccion_incompleta">There are inspection data without evaluating.</string>
    <string name="txt_msg_consulta_fecha_inspeccion">Checking last inspection date&#8230;</string>
    <string name="txt_registro_inspeccion">Registering prior inspection&#8230;</string>
    <string name="txt_registro_inspeccion_ok">Successfully registered inspection.</string>
    <string name="txt_inspeccion">Inspection</string>
    <string name="txt_consulta_imagenes">Consulting images&#8230;</string>
    <string name="txt_pausa_activa">Active pause performed</string>
    <string name="txt_consultar_solicitudes">Consultando solicitudes de servicio&#8230;</string>
    <string name="txt_msg_solicitudes_vacio">No service requests found.</string>
    <string name="txt_empresa_contratante">Contracting company</string>
    <string name="txt_objeto_contrato">Object of the contract</string>
    <string name="txt_origen_recorrido">Travel origin</string>
    <string name="txt_destino_recorrido">Traveled destination</string>
    <string name="txt_nombre_responsable">Responsible name</string>
    <string name="txt_telefono">Telephone</string>
    <string name="txt_nit_empresa_contratante">NIT Contracting company</string>
    <string name="txt_cc_responsable">CC Responsible</string>
    <string name="txt_fecha_inicio_servicio">Service start date</string>
    <string name="txt_fecha_fin_servicio">Service termination date</string>
    <string name="txt_valor_servicio">Service value</string>
    <string name="txt_multimedia" translatable="false">Multimedia</string>
    <string name="txt_enviar">Send</string>
    <string name="txt_filtrar">Filter</string>
    <string name="txt_producto">Product</string>
    <string name="txt_cantidad_exhibidos">Qty Exhibited</string>
    <string name="txt_descripcion_producto">Description for PDV products</string>
    <string name="txt_pass">Password</string>
</resources>