<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivProducto"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/txt_descripcion_logo"
        android:src="@drawable/ic_picture_gallery" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txt_descripcion_producto"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_naranja"
        android:text="@string/txt_cancelar"
        android:textColor="@color/black" />

</LinearLayout>
