<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="co.com.puli.trade.fdv.actividades.LoginActivity"
    android:orientation="vertical"
    android:padding="0dp">
    <!--android:background="@drawable/background_route_gray"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"

        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:id="@+id/content_layout_center"
        android:background="@drawable/background_route_gray">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/imageViewLogo"
            android:contentDescription="@string/txt_descripcion_logo"
            android:layout_marginTop="0dp"
            android:scaleType="fitEnd"
            android:layout_weight="1"
            android:src="@drawable/logo_route_white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:id="@+id/etUsuario"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:hint="@string/txt_user"
                android:background="@drawable/et_login"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="#FFF"
                android:textColorHint="#CCC" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:id="@+id/etPassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_login"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#FFF"
                android:textColorHint="#CCC" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:text="@string/txt_ingresar"
                android:id="@+id/btIngreso"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_ingreso"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:textColor="#ed9300" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_recordad_pass"
                android:id="@+id/btRecordarPas"
                android:layout_gravity="center_horizontal"
                android:background="#00FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:text="@string/txt_crear_usuario"
                android:id="@+id/btCrearUsuario"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bt_create_user"
                android:textColor="#FFFFFF"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/imageViewFooter"
        android:layout_weight="0.3"
        android:contentDescription="@string/txt_descripcion_imagen_footer"
        android:scaleType="fitXY"
        android:background="@color/white" />
</LinearLayout>
