<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_control_pdv"
        android:id="@+id/tvTitulo"
        android:background="#f9cc3d"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Spinner
            android:id="@+id/spCategorias"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:background="@drawable/background_spinner"
            android:paddingRight="20dp" />

        <Button
            android:id="@+id/btFiltrar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bt_naranja"
            android:padding="10dp"
            android:text="@string/txt_filtrar"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvTituloProducto"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:text="@string/txt_producto"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTituloCant"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txt_cantidad_exhibidos"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="4"
        android:background="#FFF" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_guardar"
            android:id="@+id/btGuardar"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bt_naranja"
            android:layout_marginRight="10dp"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelar"
            android:text="@string/txt_cancelar"
            android:background="@drawable/bt_naranja"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
